[package]
name = "accounting-allocator"
description = "A global memory allocator wrapper which counts allocated and deallocated bytes."
version = "0.2.0"
edition = "2021"

rust-version = "1.61.0"

repository = "https://github.com/privacyresearchgroup/accounting-allocator-rs"
license = "MIT"
categories = ["memory-management"]
keywords = ["allocator", "memory"]

exclude = ["/.github", ".*"]

[dependencies]
crossbeam-channel = "0.5.6"
once_cell = "1.16.0"

[dev-dependencies]
crossbeam-utils = "0.8.14"
